[package]
name = "haxonite"
description = """
Rock-solid API mocking for hackers
"""
documentation = "https://github.com/jmatraszek/haxonite/blob/master/USAGE.md"
homepage = "https://github.com/jmatraszek/haxonite"
repository = "https://github.com/jmatraszek/haxonite"
readme = "README.md"
keywords = ["api", "mock", "http"]
version = "0.1.0"
authors = ["Jakub Matraszek <jakub.matraszek@gmail.com>"]
license = "Apache-2.0"

[dependencies]
clap = "2"
toml = "0.2"
rustc-serialize = "0.3"
iron = "0.5"
router = "0.5"
mount = "0.3"
staticfile = "0.4"
log = "0.3"
simplelog = "^0.4.2"
rustache = "^0.0"
random_choice = "0.3"
logger = "0.3"
regex = "0.2.1"
notify = "4.0.0"

[dev-dependencies]
difference = "0.4"
reqwest = "0.8.5"
